bk_ida/gccida/g3/reg_overlap_mentioned_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_overlap_mentioned_p/src/rtlanal.c:1937:41: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = ( ( unsigned int)( *( ( _DWORD *)&mode_class_0 + v18) - 5) < 2) + 1; 
                                        ^~~~~~~~~~~~
                                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_overlap_mentioned_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/reg_overlap_mentioned_p/src/obj/rtlanal.o] Error 1
